# solar

./: .gitignore  README.md  app.py  pyproject.toml  refactor_solar_repo.py  setup.cfg
solar/: .gitignore  __init__.py  cli.py  data_processing.py  main.py  newSt.sh  payouts.py
solar/io/: ssrd_zarr_adapter.py
solar/processing/: gamma_model.py
solar_backup_20250916_115308/: Sobol.csv  app.py
solar_backup_20250916_115411/: config.py  data_input.py  detrending.py  ssrd_io.py
solar_backup_20250916_120055/risk/: payouts.py
solar_backup_20250916_120055/visualization/: plotting.py
solar_model.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
