
[metadata]
name = solar-model
version = 0.1.0
description = A solar energy modeling and risk simulation package
author = Your Name
author_email = you@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    numpy
    matplotlib
    plotly
    scipy
    statsmodels
    scikit-learn
